--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -53,7 +53,7 @@
   "mn9:14-18.5": "La rinascita è sofferenza; la vecchiaia è sofferenza; la morte è sofferenza; la tristezza, lamento, dolore, malinconia, ed angoscia sono sofferenza; l'unione con ciò che non piace è sofferenza, la separazione da ciò che piace è sofferenza; non ottenere quello che si vuole è sofferenza. In breve, i cinque aggregati dell'attaccamento sono sofferenza.",
   "mn9:14-18.6": "Questo si chiama sofferenza.",
   "mn9:14-18.7": "E qual'è l'origine della sofferenza?",
-  "mn9:14-18.8": "È la sete che porta a rinascita futura, mista a godimento ed avidità, cercare piacere nei vari diversi regni. Cioè,",
+  "mn9:14-18.8": "È la sete che porta a rinascita futura, mista a godimento ed avidità, cercare piacere nei vari diversi regni. Cioè:",
   "mn9:14-18.9": "la sete per i piaceri dei sensi, la sete di continuare a esistere, e la sete di non esistere.",
   "mn9:14-18.10": "Questo si chiama l'origine della sofferenza.",
   "mn9:14-18.11": "E qual'è la cessazione della sofferenza?",
