--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -665,5 +665,6 @@
   "dn34:2.2.7": "Purity through virtue; purity through mind; purity through view; purity through overcoming doubt; purity through knowing and seeing what is the path and what isn't; purity through knowing and seeing the practice; purity through knowledge and vision; purity through discernment; purity through freedom.",
   "dn34:2.2.8": "These are the nine things that are to be cultivated.",
   "dn34:2.2.9": "What are the nine things that are to be understood accurately?",
-  "dn34:2.2.10": "The nine abodes of beings—"
+  "dn34:2.2.10": "The nine abodes of beings—",
+  "dn34:2.2.11": "There are beings of diverse bodies and diverse perceptions, namely: humans, some angels, and some beings of fallen birth."
 }
