--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -667,5 +667,6 @@
   "dn34:2.2.9": "What are the nine things that are to be understood accurately?",
   "dn34:2.2.10": "The nine abodes of beings—",
   "dn34:2.2.11": "There are beings of diverse bodies and diverse perceptions, namely: humans, some angels, and some beings of fallen birth.",
-  "dn34:2.2.12": "This is the first abode of beings."
+  "dn34:2.2.12": "This is the first abode of beings.",
+  "dn34:2.2.13": "There are beings of diverse bodies and unified perception, namely: angels of the gods' retinue reborn there from the first [jhāna]."
 }
