--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -265,7 +265,7 @@
   "dn34:1.6.95": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk. Nor does he teach the Dhamma that he has heard and studied, with explanation, to others. Nor does he repeatedly rehearse the Dhamma he has heard and studied with explanation. Nor does he mentally investigate, deliberate, and introspectively examine the Dhamma he has heard and studied.",
   "dn34:1.6.96": "Rather, his particular object of collectedness is well-grasped, well-considered, well-taken up, and well-penetrated with discernment.",
   "dn34:1.6.97": "In whatever ways a monk's particular object of collectedness is well-grasped, well-considered, well-taken up, and well-penetrated with discernment, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
-  "dn34:1.6.98": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences pleasure. The mind of one experiencing pleasure becomes collected.",
+  "dn34:1.6.98": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences ease. The mind of one experiencing ease becomes collected.",
   "dn34:1.6.99": "This is the fifth strategy for freedom.",
   "dn34:1.6.100": "These are the five things that are to be understood fully.",
   "dn34:1.6.101": "What are the five things that are to be seen for oneself?",
