--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -255,7 +255,7 @@
   "dn34:1.6.85": "This is the second strategy for freedom.",
   "dn34:1.6.86": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk. Nor does he teach the Dhamma that he has heard and studied, with explanation, to others. Rather, he repeatedly rehearses the Dhamma he has heard and studied with explanation.",
   "dn34:1.6.87": "In whatever ways he repeatedly rehearses the Dhamma he has heard and studied with explanation, in just those ways he appreciates the significance and he appreciates the methodology in that Dhamma. ",
-  "dn34:1.6.88": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences pleasure. The mind of one experiencing pleasure becomes collected.",
+  "dn34:1.6.88": "For one who appreciates significance and methodology, gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences ease. The mind of one experiencing ease becomes collected.",
   "dn34:1.6.89": "This is the third strategy for freedom.",
   "dn34:1.6.90": "Or alternatively, a teacher or a certain of one's fellows in the holy life in the place of a teacher do not teach the Dhamma to a monk. Nor does he teach the Dhamma that he has heard and studied, with explanation, to others. Nor does he repeatedly rehearse the Dhamma he has heard and studied with explanation.",
   "dn34:1.6.91": "Rather, he mentally investigates, deliberates, and introspectively examines the Dhamma he has heard and studied.",
