--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
   "sn1.5:0.1": "Verbundene Lehrreden 1 ",
   "sn1.5:0.2": "1. Ein Schilfrohr ",
-  "sn1.5:0.3": "5. Wie viele sind zu zerschneiden? "
+  "sn1.5:0.3": "5. Wie viele zu zerschneiden? "
 }
