--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn1.5:0.3": "5. Wie viele zu zerschneiden? ",
   "sn1.5:1.1": "In Sāvatthī. ",
   "sn1.5:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
-  "sn1.5:2.1": "„Wie viele sind zu zerschneiden? Wie viele fallen zu lassen? "
+  "sn1.5:2.1": "„Wie viele sind zu zerschneiden? Wie viele fallen zu lassen? ",
+  "sn1.5:2.2": "Wieviel mehr sind noch zu entwickeln? "
 }
