--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn1.5:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.5:2.1": "„Wie viele sind zu zerschneiden? Wie viele fallen zu lassen? ",
   "sn1.5:2.2": "Wie viel mehr sind noch zu entwickeln? ",
-  "sn1.5:2.3": "Wie vielen Ketten muss ein Mönch entrinnen, "
+  "sn1.5:2.3": "Wie vielen Ketten muss ein Mönch entrinnen, ",
+  "sn1.5:2.4": "bevor man ihn einen nennt, der die Flut überquert hat?“ "
 }
