--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.5_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn1.5:2.2": "Wie viel mehr sind noch zu entwickeln? ",
   "sn1.5:2.3": "Wie vielen Ketten muss ein Mönch entrinnen, ",
   "sn1.5:2.4": "bevor man ihn einen nennt, der die Flut überquert hat?“ ",
-  "sn1.5:3.1": "„Fünf sind zu zerschneiden, fünf fallen zu lassen, "
+  "sn1.5:3.1": "„Fünf sind zu zerschneiden, fünf fallen zu lassen, ",
+  "sn1.5:3.2": "fünf mehr sind noch zu entwickeln. "
 }
