--- a/translation/it/giovannizappa/sutta/mn/mn4_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn4_translation-it-giovannizappa.json
@@ -79,7 +79,7 @@
   "mn4:21.4": "E se c'è qualcuno riguardo a cui si può dire giustamente che",
   "mn4:21.5": "un essere non influenzato dall'illusione sia sorto nel mondo per il benessere e felicità della gente, per il beneficio, prosperità, e felicità di dei e uomini, è di me che sarebbe da dire.",
   "mn4:22-26.1": "La mia energia era attiva e infaticabile, la mia presenza mentale era stabile e lucida, il mio corpo era tranquillo e indisturbato, e la mia mente era raccolta.",
-  "mn4:22-26.2": "Abbastanza appartato dai piaceri dei sensi, appartato da qualità malsane, sono entrato e sono rimasto nel primo stadio di meditazione, con estasi e gioia nati dall'isolamento, con inclinazione e sostentamento mentali.",
+  "mn4:22-26.2": "Abbastanza appartato dai piaceri dei sensi, appartato da qualità malsane, sono entrato e sono rimasto nel primo stadio di meditazione, con estasi e gioia nati dall'isolamento, con inclinazione e sostentazione mentali.",
   "mn4:22-26.3": "Con il placarsi dell'inclinazione e sostentazione mentali, sono entrato e sono rimasto nel secondo stadio di meditazione, con estasi e gioia nate dal raccoglimento mentale, con chiarezza e fiducia interna, e mente unificata, senza inclinazione e sostentazione mentali.",
   "mn4:22-26.4": "Con lo svanire dell'estasi, sono entrato e sono rimasto nel terzo stadio di meditazione, dove ho meditato con equanimità, presente e consapevole, facendo esperienza della gioia di cui i nobili dichiarano, ‘Equanime e presente, egli medita nella gioia.’",
   "mn4:22-26.5": "Abbandonando gioia e dolore, e mettendo fine a felicità e tristezza precedenti, sono entrato e sono rimasto nel quarto stadio di meditazione, senza piacere o dolore, con pura equanimità e presenza mentale.",
