--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn1.6:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.6:2.1": "„Wie viele schlafen, während andere wach sind? ",
   "sn1.6:2.2": "Wie viele sind unter den Schlafenden wach? ",
-  "sn1.6:2.3": "Mit wie vielen staubt man zu? "
+  "sn1.6:2.3": "Mit wie vielen staubt man zu? ",
+  "sn1.6:2.4": "Mit wie vielen ist man geläutert?“ "
 }
