--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.6_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn1.6:2.4": "Mit wie vielen ist man geläutert?“ ",
   "sn1.6:3.1": "„Fünf schlafen, während andere wach sind, ",
   "sn1.6:3.2": "fünf sind unter den Schlafenden wach. ",
-  "sn1.6:3.3": "Mit Fünfen staubt man zu, "
+  "sn1.6:3.3": "Mit Fünfen staubt man zu, ",
+  "sn1.6:3.4": "Mit fünf ist man geläutert.“ "
 }
