--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn1.7:0.1": "Verbundene Lehrreden 1 ",
   "sn1.7:0.2": "1. Ein Schilfrohr ",
-  "sn1.7:0.3": "7. Nicht erfassen "
+  "sn1.7:0.3": "7. Nicht erfassen ",
+  "sn1.7:1.1": "In Sāvatthī. "
 }
