--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn1.7:0.3": "7. Nicht begriffen ",
   "sn1.7:1.1": "In Sāvatthī. ",
   "sn1.7:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
-  "sn1.7:2.1": "„Die, die die Lehren nicht begriffen haben, "
+  "sn1.7:2.1": "„Die, die die Lehren nicht begriffen haben, ",
+  "sn1.7:2.2": "anfällig für die Lehren anderer, "
 }
