--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.7_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn1.7:2.2": "anfällig für die Lehren anderer, ",
   "sn1.7:2.3": "sie schlafen, sind nicht aufgewacht: ",
   "sn1.7:2.4": "Es ist Zeit, dass sie wach werden!“ ",
-  "sn1.7:3.1": "„Die, die die Lehren gut begriffen haben, "
+  "sn1.7:3.1": "„Die, die die Lehren gut begriffen haben, ",
+  "sn1.7:3.2": "nicht anfällig für die Lehren anderer, "
 }
