--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -9,6 +9,7 @@
   "sn-name:8.sn1.5": "Wie viele zu zerschneiden? ",
   "sn-name:9.sn1.6": "Wach ",
   "sn-name:10.sn1.7": "Nicht begriffen ",
+  "sn-name:11.sn1.8": "Sehr verwirrt ",
   "sn-name:14.sn1-nandanavagga": "Der Garten der Wonne ",
   "sn-name:15.sn1.11": "Der Garten der Wonne ",
   "sn-name:25.sn1-sattivagga": "Ein Schwert ",
