--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.8_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn1.8:1.2": "Als sie sich zur Seite hingestellt hatte, sagte diese Gottheit vor dem Buddha diese Strophe auf: ",
   "sn1.8:2.1": "„Die, die über die Lehren sehr verwirrt sind, ",
   "sn1.8:2.2": "anfällig für die Lehren anderer, ",
-  "sn1.8:2.3": "sie schlafen, sind nicht aufgewacht: "
+  "sn1.8:2.3": "sie schlafen, sind nicht aufgewacht: ",
+  "sn1.8:2.4": "Es ist Zeit, dass sie wach werden!“ "
 }
