--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.8_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.8_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn1.8:2.3": "sie schlafen, sind nicht aufgewacht: ",
   "sn1.8:2.4": "Es ist Zeit, dass sie wach werden!“ ",
   "sn1.8:3.1": "„Die, die über die Lehren nicht verwirrt sind, ",
-  "sn1.8:3.2": "nicht anfällig für die Lehren anderer, "
+  "sn1.8:3.2": "nicht anfällig für die Lehren anderer, ",
+  "sn1.8:3.3": "sie sind aufgewacht, sie verstehen richtig "
 }
