--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn1.9:0.1": "Verbundene Lehrreden 1 ",
-  "sn1.9:0.2": "1. Ein Schilfrohr "
+  "sn1.9:0.2": "1. Ein Schilfrohr ",
+  "sn1.9:0.3": "9. Die Einbildung lieben "
 }
