--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -108,5 +108,6 @@
   "mn1:26.2": "निर्वाणको निर्वाण समझकर खु़दको निर्वाण मानता है, खु़दको निर्वाणमे मानता है, खु़दको निर्वाणसे अलग मानता है, निर्वाण मेरा है ऍसा मानता है, निर्वाणमे आनंद लेता है।",
   "mn1:26.3": "एैसा किस लिये?",
   "mn1:26.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:26.5": "सामान्य जनके प्रथम भूमिपरिच्छेदकी पूर्णता।"
+  "mn1:26.5": "सामान्य जनके प्रथम भूमिपरिच्छेदकी पूर्णता।",
+  "mn1:27.1": "भिक्षुओ, जो भिक्षु शिक्षार्थि है, जिसने ध्येय पूर्ण नहि किया किंतु जिसे बंधनसे मुक्तीके सर्वश्रेष्ठ आश्रयकी आकांशा है वह भि प्रत्यक्ष तौरसे पृथ्विको पृथ्वि जानता है;"
 }
