--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -109,5 +109,5 @@
   "mn1:26.3": "एैसा किस लिये?",
   "mn1:26.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:26.5": "सामान्य जनके प्रथम भूमिपरिच्छेदकी पूर्णता।",
-  "mn1:27.1": "भिक्षुओ, जो भिक्षु शिक्षार्थि है, जिसने ध्येय पूर्ण नहि किया किंतु जिसे बंधनसे मुक्तीके सर्वश्रेष्ठ आश्रयकी आकांशा है वह भि प्रत्यक्ष तौरसे पृथ्विको पृथ्वि जानता है;"
+  "mn1:27.1": "भिक्षुओ, जो भिक्षु शिक्षार्थि है, जिसने ध्येय पूर्ण नहि किया किंतु जिसे बंधनसे मुक्तीके सर्वश्रेष्ठ आश्रयकी आकांशा है वह भि प्रत्यक्ष तौरसे पृथ्विको पृथ्विके तौरसे जानता है;"
 }
