--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn1.9:2.1": "„Wer die Einbildung liebt, kann nicht gezähmt werden, ",
   "sn1.9:2.2": "und wem die Ruhe fehlt, kann kein Weiser sein. ",
   "sn1.9:2.3": "Wer allein in der Wildnis nachlässig lebt, ",
-  "sn1.9:2.4": "kann über das Hoheitsgebiet des Todes nicht hinausgelangen.“ "
+  "sn1.9:2.4": "kann über das Hoheitsgebiet des Todes nicht hinausgelangen.“ ",
+  "sn1.9:3.1": "„Wer die Einbildung aufgegeben hat, innerlich gelassen, "
 }
