--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn1.9:2.3": "Wer allein in der Wildnis nachlässig lebt, ",
   "sn1.9:2.4": "kann über das Hoheitsgebiet des Todes nicht hinausgelangen.“ ",
   "sn1.9:3.1": "„Wer die Einbildung aufgegeben hat, innerlich gelassen, ",
-  "sn1.9:3.2": "gesunden Herzens, in jeder Hinsicht frei, "
+  "sn1.9:3.2": "gesunden Herzens, in jeder Hinsicht frei, ",
+  "sn1.9:3.3": "Wer allein in der Wildnis beflissen lebt, "
 }
