--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.9_translation-de-sabbamitta.json
@@ -11,5 +11,5 @@
   "sn1.9:3.1": "„Wer die Einbildung aufgegeben hat, innerlich gelassen, ",
   "sn1.9:3.2": "gesunden Herzens, in jeder Hinsicht frei, ",
   "sn1.9:3.3": "wer allein in der Wildnis beflissen lebt, ",
-  "sn1.9:3.4": "er wird das Hoheitsgebiet des Todes nicht hinausgelangen.“ "
+  "sn1.9:3.4": "er gelangt über das Hoheitsgebiet des Todes hinaus.“ "
 }
