--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn1.10:0.1": "Verbundene Lehrreden 1 ",
   "sn1.10:0.2": "1. Ein Schilfrohr ",
-  "sn1.10:0.3": "10. Wildnis "
+  "sn1.10:0.3": "10. Wildnis ",
+  "sn1.10:1.1": "In Sāvatthī. "
 }
