--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn1.10:0.1": "Verbundene Lehrreden 1 ",
   "sn1.10:0.2": "1. Ein Schilfrohr ",
   "sn1.10:0.3": "10. Wildnis ",
-  "sn1.10:1.1": "In Sāvatthī. "
+  "sn1.10:1.1": "In Sāvatthī. ",
+  "sn1.10:1.2": "Als sie sich zur Seite hingestellt hatte, redete diese Gottheit den Buddha mit einer Strophe an: "
 }
