--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn1.10:0.3": "10. Wildnis ",
   "sn1.10:1.1": "In Sāvatthī. ",
   "sn1.10:1.2": "Als sie sich zur Seite hingestellt hatte, redete diese Gottheit den Buddha mit einer Strophe an: ",
-  "sn1.10:2.1": "„Wenn sie in der Wildnis leben, "
+  "sn1.10:2.1": "„Wenn sie in der Wildnis leben, ",
+  "sn1.10:2.2": "nehmen die Friedvollen, die der geistlichen Übung folgen, "
 }
