--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn1.10:3.2": "noch sehnen sie die Zukunft herbei; ",
   "sn1.10:3.3": "vom Gegenwärtigen leben sie, ",
   "sn1.10:3.4": "darum ist ihre Hautfarbe so klar. ",
-  "sn1.10:4.1": "Weil sie die Zukunft herbeisehnen "
+  "sn1.10:4.1": "Weil sie die Zukunft herbeisehnen ",
+  "sn1.10:4.2": "und der Vergangenheit nachtrauern, "
 }
