--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn1.10:3.3": "vom Gegenwärtigen leben sie, ",
   "sn1.10:3.4": "darum ist ihre Hautfarbe so klar. ",
   "sn1.10:4.1": "Weil sie die Zukunft herbeisehnen ",
-  "sn1.10:4.2": "und der Vergangenheit nachtrauern, "
+  "sn1.10:4.2": "und der Vergangenheit nachtrauern, ",
+  "sn1.10:4.3": "vertrocknen die Toren "
 }
