--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.10_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn1.10:1.2": "Als sie sich zur Seite hingestellt hatte, redete diese Gottheit den Buddha mit einer Strophe an: ",
   "sn1.10:2.1": "„Wenn sie in der Wildnis leben, ",
   "sn1.10:2.2": "nehmen die Friedvollen, die der geistlichen Übung folgen, ",
-  "sn1.10:2.3": "nur eine Mahlzeit am tag zu sich: ",
+  "sn1.10:2.3": "nur eine Mahlzeit am Tag zu sich: ",
   "sn1.10:2.4": "Warum ist ihre Hautfarbe so klar?“ ",
   "sn1.10:3.1": "„Sie trauern der Vergangenheit nicht nach, ",
   "sn1.10:3.2": "noch sehnen sie die Zukunft herbei; ",
